syntax = "proto3";

package chatPackage;

message ChatRequest {
  string message = 1;
}

message ChatResponse {
  string username = 1;
  string message = 2;
}

service Chat {
  rpc Chat(stream ChatRequest) returns (stream ChatResponse);
}